--- a/style.css
+++ b/style.css
@@ -209,6 +209,10 @@
         width: 320px;
         height: 240px;
     }
+    .add-bg{
+        width: 320px;
+        height: 240px;
+    }
     .note .header{
         height: 40px;
     }
